src/components/ImageGallery/AnimationBtn/AnimationBtn.module.css
.container {
    display: grid;
    grid-template-columns: auto auto;
    width: 5rem;
    justify-content: space-between;
    align-items: center;

    border: none;
    border-radius: 10px;
    padding: 0.4rem;

    cursor: pointer;

    background-color: var(--primary-button);
}

.container:hover {
    background-color: var(--primary-button-hover);
}

